--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <title>Essai hosting</title>
 </head>
 <body>
-    <h1>nos services</h1>
-    <p> nous essayons de faire mieux</p>
+    <h1>Bonjour les Amis</h1>
+    <p> 
+    nous essayons de faire mieux pour voir comment nous pouvons tester nos petit
+    projets. Merci de votre soutien et de votre patience pendant que nous apprenons
+    ensemble.
+    </p>
 </body>
 </html>
