--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <p> 
     nous essayons de faire mieux pour voir comment nous pouvons tester nos petit
     projets. Merci de votre soutien et de votre patience pendant que nous apprenons
-    ensemble.
+    ensemble. tout votre club de termaDevs est là pour vous aider et vous soutenir 
+    dans vos projets.
     </p>
 </body>
 </html>
