--- a/index.html
+++ b/index.html
@@ -3,9 +3,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Essai hosting</title>
+    <style>
+        p {
+            font-size: 1.2em;
+            line-height: 1.5;
+            color: #333;
+            text-align: justify;
+        }
+    </style>
 </head>
 <body>
     <h1>Bonjour les Amis</h1>
+    
     <p> 
     nous essayons de faire mieux pour voir comment nous pouvons tester nos petit
     projets. Merci de votre soutien et de votre patience pendant que nous apprenons
