--- a/index.html
+++ b/index.html
@@ -2,24 +2,119 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Essai hosting</title>
+    <title>Plan Hebdomadaire</title>
     <style>
-        p {
-            font-size: 1.2em;
-            line-height: 1.5;
-            color: #333;
-            text-align: justify;
+        body{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        table{
+            border-collapse: collapse;
+        }
+        td,th{
+            border: 1px solid black;
+            text-align: center;
+            padding: 10px;
         }
     </style>
 </head>
 <body>
-    <h1>Bonjour les Amis</h1>
-    
-    <p> 
-    nous essayons de faire mieux pour voir comment nous pouvons tester nos petit
-    projets. Merci de votre soutien et de votre patience pendant que nous apprenons
-    ensemble. tout votre club de termaDevs est là pour vous aider et vous soutenir 
-    dans vos projets.
-    </p>
+    <article>
+        <div>
+
+        </div>
+        <div>
+            <table>
+                <tr>
+                    <th>Mardi</th><th>Mercredi</th><th>Jeudi</th><th>Vendredi</th><th>Samedi</th>
+                </tr>
+                <tr>
+                    <td colspan="5">Priorite du jour</td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td colspan="5">rendez-vous / Engagement</td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                
+            </table>
+        </div>
+    </article>
 </body>
 </html>
