--- a/vue/index.html
+++ b/vue/index.html
@@ -12,30 +12,37 @@
 
 <div class="wrap">
   <header>
+    <!-- logo et les textes -->
     <div class="brand">
       <div class="logo" aria-hidden="true">
-        <!-- simple SVG telecom-ish logo -->
-        <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden>
-          <path d="M4 12c2-4 8-8 12-4" stroke="#04221a" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-          <circle cx="12" cy="12" r="4" fill="#04221a" />
-          <path d="M20 4l-4 4" stroke="#fff" stroke-opacity="0.06" stroke-width="1.2" />
-        </svg>
+         <a href="index.html">
+             <!-- simple SVG telecom-ish logo -->
+                <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden>
+                <path d="M4 12c2-4 8-8 12-4" stroke="#04221a" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                <circle cx="12" cy="12" r="4" fill="#04221a" />
+                <path d="M20 4l-4 4" stroke="#fff" stroke-opacity="0.06" stroke-width="1.2" />
+                </svg>
+              <!-- fin dessin logo -->
+        </a>
       </div>
       <div>
         <h1>JosNet</h1>
         <p>Vente Télécom • Dev • Formation • Coaching</p>
       </div>
     </div>
-
+  <!-- fin du logo et les textes ensemble -->
+<!-- navigateur debut-->
     <nav class="nav">
-      <button class="btn">Produits</button>
-      <button class="btn">Services</button>
-      <button class="btn">Contact</button>
+      <a href="produits.html"><button class="btn">Produits</button></a>
+      <a href="services.html"><button class="btn">Services</button></a>
+      <a href="contact.html"><button class="btn">Contact</button></a>  
     </nav>
+  <!-- navigateur fin-->
   </header>
 
   <!-- HERO -->
   <section class="hero reveal" id="hero">
+
     <div class="hero-left">
       <div class="kicker">NOUVEAU • Réseau & Solutions</div>
       <h2 class="title">Construisons l'infrastructure numérique du futur</h2>
@@ -133,113 +140,7 @@
   <footer class="reveal">
     <small>&copy; <span id="year"></span> TermaDevs — Construit pour l'avenir </small>
   </footer>
+  <script src="javascript/imageAnimation.js"></script>
 </div>
-
-<script>
-/* ======================================================
-   CANVAS PARTICLES (lightweight)
-   ====================================================== */
-(() => {
-  const canvas = document.getElementById('bg-canvas');
-  const ctx = canvas.getContext('2d');
-  let w = canvas.width = innerWidth;
-  let h = canvas.height = innerHeight;
-  const dpr = Math.min(window.devicePixelRatio || 1, 2);
-  canvas.width = w * dpr; canvas.height = h * dpr; canvas.style.width = w + 'px'; canvas.style.height = h + 'px';
-  ctx.scale(dpr, dpr);
-
-  const particles = [];
-  const NUM = Math.floor((w*h)/90000); // scalable count
-  for(let i=0;i<NUM;i++){
-    particles.push({
-      x: Math.random()*w,
-      y: Math.random()*h,
-      r: 0.6 + Math.random()*1.6,
-      vx: (Math.random()-0.5)*0.25,
-      vy: (Math.random()-0.5)*0.25,
-      life: Math.random()*100
-    });
-  }
-  function draw(){
-    ctx.clearRect(0,0,w,h);
-    // subtle gradient glow center
-    const g = ctx.createRadialGradient(w*0.15,h*0.1,0,w*0.5,h*0.5,Math.max(w,h));
-    g.addColorStop(0,'rgba(5,240,122,0.03)');
-    g.addColorStop(1,'rgba(0,0,0,0)');
-    ctx.fillStyle = g; ctx.fillRect(0,0,w,h);
-
-    for(const p of particles){
-      p.x += p.vx; p.y += p.vy; p.life += 0.02;
-      if(p.x < -10) p.x = w+10;
-      if(p.x > w+10) p.x = -10;
-      if(p.y < -10) p.y = h+10;
-      if(p.y > h+10) p.y = -10;
-
-      ctx.beginPath();
-      const alpha = 0.12 + 0.3*Math.sin(p.life*0.05);
-      ctx.fillStyle = `rgba(5,240,122,${alpha})`;
-      ctx.arc(p.x, p.y, p.r, 0, Math.PI*2);
-      ctx.fill();
-    }
-
-    requestAnimationFrame(draw);
-  }
-  // handle resize
-  addEventListener('resize', ()=> {
-    w = canvas.width = innerWidth;
-    h = canvas.height = innerHeight;
-    canvas.width = w * dpr; canvas.height = h * dpr; canvas.style.width = w + 'px'; canvas.style.height = h + 'px';
-    ctx.scale(dpr,dpr);
-  });
-  draw();
-})();
-
-/* ======================================================
-   SCROLL REVEAL (IntersectionObserver)
-   ====================================================== */
-(() => {
-  const elems = document.querySelectorAll('.reveal');
-  const io = new IntersectionObserver((entries)=>{
-    entries.forEach(entry => {
-      if(entry.isIntersecting){
-        entry.target.classList.add('show');
-        // once shown keep it
-      }
-    });
-  }, {threshold: 0.12});
-  elems.forEach(e => io.observe(e));
-})();
-
-/* ======================================================
-   TILT EFFECT (mouse) for elements with data-tilt
-   lightweight, not using any lib
-   ====================================================== */
-(() => {
-  const tiltables = document.querySelectorAll('[data-tilt]');
-  tiltables.forEach(el => {
-    const rect = el.getBoundingClientRect();
-    el.style.transformStyle = 'preserve-3d';
-    function handle(e){
-      const r = el.getBoundingClientRect();
-      const px = (e.clientX - r.left)/r.width;
-      const py = (e.clientY - r.top)/r.height;
-      const rx = (py - 0.5) * 12; // rotateX
-      const ry = (px - 0.5) * -12; // rotateY
-      el.style.transform = `perspective(1000px) rotateX(${rx}deg) rotateY(${ry}deg) translateZ(4px)`;
-    }
-    function reset(){ el.style.transform = 'perspective(1000px) rotateX(0deg) rotateY(0deg)'; }
-    el.addEventListener('mousemove', handle);
-    el.addEventListener('mouseleave', reset);
-    // touch fallback: small pop
-    el.addEventListener('touchstart', ()=> el.style.transform = 'translateY(-6px) scale(1.02)');
-    el.addEventListener('touchend', reset);
-  });
-})();
-
-/* ======================================================
-   Misc: year & accessibility (reduce motion)
-   ====================================================== */
-document.getElementById('year').textContent = new Date().getFullYear();
-</script>
 </body>
 </html>
