--- a/vue/index.html
+++ b/vue/index.html
@@ -7,7 +7,11 @@
 <link rel="stylesheet" href="styles/style.css" />
 </head>
 <body>
-
+<div class="user_message">
+  <div class="panier"></div>
+  <div class="notification"></div>
+  <div class="profil"></div>
+</div>
 <canvas id="bg-canvas"></canvas>
 
 <div class="wrap">
