--- a/vue/produits.html
+++ b/vue/produits.html
@@ -10,9 +10,10 @@
 </head>
 <body>
 <div class="user_message">
-  <div class="panier"></div>
-  <div class="notification"></div>
-  <div class="profil"></div>
+  <a href=""><div class="panier" data-tooltip="panier"></div></a>
+  <a href=""><div class="notification" data-tooltip="notification"></div></a>
+  <a href=""><div class="profil" data-tooltip="Profil"></div></a>
+</div>
 </div>
 <canvas id="bg-canvas"></canvas>
 
@@ -53,15 +54,15 @@
   <!-- FEATURES GRID -->
   <section class="reveal" id="features">
     <div class="grid">
-        <article class="card" data-tilt>
+      <article class="card" data-tilt>
           <img src="../vue/images/equipement.jpg" alt="">
           <h3>Ticot orginal pour les garcons</h3>
           <p> L'un de nos produits les plus demandes</h3>
           <div class="alignements_icones">
-            <i class=" icon fas fa-share-alt"></i>
-            <i class=" icon fas fa-heart"></i>
-            <i class=" icon fas fa-shopping-cart"></i>
             <i class=" icon fas fa-comments"></i>
+             <i class=" icon fas fa-star"></i>
+             <i class=" icon fas fa-share-alt"></i>
+            <i class=" icon fas fa-shopping-cart"></i>
           </div>
       </article>
 
@@ -70,10 +71,10 @@
           <h3>Ticot orginal pour les garcons</h3>
           <p> L'un de nos produits les plus demandes</h3>
           <div class="alignements_icones">
-            <i class=" icon fas fa-share-alt"></i>
-            <i class=" icon fas fa-heart"></i>
-            <i class=" icon fas fa-shopping-cart"></i>
             <i class=" icon fas fa-comments"></i>
+             <i class=" icon fas fa-star"></i>
+             <i class=" icon fas fa-share-alt"></i>
+            <i class=" icon fas fa-shopping-cart"></i>
           </div>
       </article>
 
@@ -82,22 +83,22 @@
           <h3>Ticot orginal pour les garcons</h3>
           <p> L'un de nos produits les plus demandes</h3>
           <div class="alignements_icones">
-            <i class=" icon fas fa-share-alt"></i>
-            <i class=" icon fas fa-heart"></i>
-            <i class=" icon fas fa-shopping-cart"></i>
             <i class=" icon fas fa-comments"></i>
+             <i class=" icon fas fa-star"></i>
+             <i class=" icon fas fa-share-alt"></i>
+            <i class=" icon fas fa-shopping-cart"></i>
           </div>
       </article>
 
       <article class="card" data-tilt>
-       <img src="../vue/images/d.jpg" alt="">
+       <img src="../vue/images/equipement.jpg" alt="">
           <h3>Ticot orginal pour les garcons</h3>
           <p> L'un de nos produits les plus demandes</h3>
           <div class="alignements_icones">
-            <i class=" icon fas fa-share-alt"></i>
-            <i class=" icon fas fa-heart"></i>
+           <i class=" icon fas fa-comments"></i>
+             <i class=" icon fas fa-star"></i>
+             <i class=" icon fas fa-share-alt"></i>
             <i class=" icon fas fa-shopping-cart"></i>
-            <i class=" icon fas fa-comments"></i>
           </div>
       </article>
         <article class="card" data-tilt>
@@ -105,10 +106,10 @@
           <h3>Materiel informatique</h3>
           <p> L'un de nos produits les plus demandes</h3>
           <div class="alignements_icones">
-            <i class=" icon fas fa-share-alt"></i>
-            <i class=" icon fas fa-heart"></i>
-            <i class=" icon fas fa-shopping-cart"></i>
             <i class=" icon fas fa-comments"></i>
+             <i class=" icon fas fa-star"></i>
+             <i class=" icon fas fa-share-alt"></i>
+            <i class=" icon fas fa-shopping-cart"></i>
           </div>
       </article>
 
@@ -117,34 +118,34 @@
           <h3>Ticot orginal pour les garcons</h3>
           <p> L'un de nos produits les plus demandes</h3>
           <div class="alignements_icones">
-            <i class=" icon fas fa-share-alt"></i>
-            <i class=" icon fas fa-heart"></i>
-            <i class=" icon fas fa-shopping-cart"></i>
             <i class=" icon fas fa-comments"></i>
+             <i class=" icon fas fa-star"></i>
+             <i class=" icon fas fa-share-alt"></i>
+            <i class=" icon fas fa-shopping-cart"></i>
           </div>
       </article>
 
       <article class="card" data-tilt>
-        <img src="../vue/images/b.jpg" alt="">
+        <img src="../vue/images/equipement.jpg" alt="">
           <h3>Ticot orginal pour les garcons</h3>
           <p> L'un de nos produits les plus demandes</h3>
           <div class="alignements_icones">
-            <i class=" icon fas fa-share-alt"></i>
-            <i class=" icon fas fa-heart"></i>
-            <i class=" icon fas fa-shopping-cart"></i>
             <i class=" icon fas fa-comments"></i>
+             <i class=" icon fas fa-star"></i>
+             <i class=" icon fas fa-share-alt"></i>
+            <i class=" icon fas fa-shopping-cart"></i>
           </div>
       </article>
 
       <article class="card" data-tilt>
-       <img src="../vue/images/image3.jpg" alt="">
+       <img src="../vue/images/equipement.jpg" alt="">
           <h3>Ticot orginal pour les garcons</h3>
           <p> L'un de nos produits les plus demandes</h3>
           <div class="alignements_icones">
-            <i class=" icon fas fa-share-alt"></i>
-            <i class=" icon fas fa-heart"></i>
+           <i class=" icon fas fa-comments"></i>
+             <i class=" icon fas fa-star"></i>
+             <i class=" icon fas fa-share-alt"></i>
             <i class=" icon fas fa-shopping-cart"></i>
-            <i class=" icon fas fa-comments"></i>
           </div>
       </article>
       <article class="card" data-tilt>
@@ -152,10 +153,10 @@
           <h3>Costume pour homme</h3>
           <p> L'un de nos produits les plus demandes</h3>
           <div class="alignements_icones">
-            <i class=" icon fas fa-share-alt"></i>
-            <i class=" icon fas fa-heart"></i>
-            <i class=" icon fas fa-shopping-cart"></i>
             <i class=" icon fas fa-comments"></i>
+             <i class=" icon fas fa-star"></i>
+             <i class=" icon fas fa-share-alt"></i>
+            <i class=" icon fas fa-shopping-cart"></i>
           </div>
       </article>
 
@@ -164,10 +165,10 @@
           <h3>Costume pour homme</h3>
           <p> L'un de nos produits les plus demandes</h3>
           <div class="alignements_icones">
-            <i class=" icon fas fa-share-alt"></i>
-            <i class=" icon fas fa-heart"></i>
-            <i class=" icon fas fa-shopping-cart"></i>
             <i class=" icon fas fa-comments"></i>
+             <i class=" icon fas fa-star"></i>
+             <i class=" icon fas fa-share-alt"></i>
+            <i class=" icon fas fa-shopping-cart"></i>
           </div>
       </article>
 
@@ -176,10 +177,10 @@
           <h3>Costume pour homme</h3>
           <p> L'un de nos produits les plus demandes</h3>
           <div class="alignements_icones">
-            <i class=" icon fas fa-share-alt"></i>
-            <i class=" icon fas fa-heart"></i>
-            <i class=" icon fas fa-shopping-cart"></i>
             <i class=" icon fas fa-comments"></i>
+             <i class=" icon fas fa-star"></i>
+             <i class=" icon fas fa-share-alt"></i>
+            <i class=" icon fas fa-shopping-cart"></i>
           </div>
       </article>
 
@@ -188,45 +189,45 @@
           <h3>Ticot orginal pour les garcons</h3>
           <p> L'un de nos produits les plus demandes</h3>
           <div class="alignements_icones">
-            <i class=" icon fas fa-share-alt"></i>
-            <i class=" icon fas fa-heart"></i>
-            <i class=" icon fas fa-shopping-cart"></i>
             <i class=" icon fas fa-comments"></i>
+             <i class=" icon fas fa-star"></i>
+             <i class=" icon fas fa-share-alt"></i>
+            <i class=" icon fas fa-shopping-cart"></i>
           </div>
       </article>
        <article class="card" data-tilt>
-        <img src="../vue/images/image8.jpg" alt="">
+        <img src="../vue/images/equipement.jpg" alt="">
           <h3>Ticot orginal pour les garcons</h3>
           <p> L'un de nos produits les plus demandes</h3>
           <div class="alignements_icones">
-            <i class=" icon fas fa-share-alt"></i>
-            <i class=" icon fas fa-heart"></i>
+           <i class=" icon fas fa-comments"></i>
+             <i class=" icon fas fa-star"></i>
+             <i class=" icon fas fa-share-alt"></i>
             <i class=" icon fas fa-shopping-cart"></i>
-            <i class=" icon fas fa-comments"></i>
           </div>
       </article>
 
       <article class="card" data-tilt>
-        <img src="../vue/images/c.jpg" alt="">
+        <img src="../vue/images/equipement.jpg" alt="">
           <h3>Ticot orginal pour les garcons</h3>
           <p> L'un de nos produits les plus demandes</h3>
           <div class="alignements_icones">
-            <i class=" icon fas fa-share-alt"></i>
-            <i class=" icon fas fa-heart"></i>
-            <i class=" icon fas fa-shopping-cart"></i>
             <i class=" icon fas fa-comments"></i>
+             <i class=" icon fas fa-star"></i>
+             <i class=" icon fas fa-share-alt"></i>
+            <i class=" icon fas fa-shopping-cart"></i>
           </div>
       </article>
 
       <article class="card" data-tilt>
-        <img src="../vue/images/a.jpg" alt="">
+        <img src="../vue/images/equipement.jpg" alt="">
           <h3>Ticot orginal pour les garcons</h3>
           <p> L'un de nos produits les plus demandes</h3>
           <div class="alignements_icones">
-            <i class=" icon fas fa-share-alt"></i>
-            <i class=" icon fas fa-heart"></i>
-            <i class=" icon fas fa-shopping-cart"></i>
             <i class=" icon fas fa-comments"></i>
+             <i class=" icon fas fa-star"></i>
+             <i class=" icon fas fa-share-alt"></i>
+            <i class=" icon fas fa-shopping-cart"></i>
           </div>
       </article>
 
@@ -235,10 +236,10 @@
           <h3>Ticot orginal pour les garcons</h3>
           <p> L'un de nos produits les plus demandes</h3>
           <div class="alignements_icones">
-            <i class=" icon fas fa-share-alt"></i>
-            <i class=" icon fas fa-heart"></i>
-            <i class=" icon fas fa-shopping-cart"></i>
             <i class=" icon fas fa-comments"></i>
+             <i class=" icon fas fa-star"></i>
+             <i class=" icon fas fa-share-alt"></i>
+            <i class=" icon fas fa-shopping-cart"></i>
           </div>
       </article>
     </div>
