--- a/vue/contact.html
+++ b/vue/contact.html
@@ -5,6 +5,11 @@
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>Contacts</title>
 <link rel="stylesheet" href="styles/style.css" />
+<style>
+  p ~ p {
+    color:red;
+  }
+</style>
 </head>
 <body>
 <div class="user_message">
@@ -46,7 +51,11 @@
   </header>
     <div class="hero-left">
         <div class="contenu_contact">
-
+         <p>My text is not red</p>
+<p>My text is red</p>
+<p>My text is red</p>
+<hr>
+<p>My text is not red</p>
         </div>
     </div>
       <!-- tiny neon accent -->
